# sheets

./: .gitignore  README.md
backend/: .gitignore  deploy.ps1  go.mod  go.sum  main.go
backend-go/: go.mod  main.go
backend-go/config/: config.go
backend-go/db/: dynamo.go
backend-go/db/model/: SpreadSheet.go
backend-go/handlers/auth/callback/: main.go
backend-go/handlers/spreadsheets/copy/: main.go
backend-go/handlers/spreadsheets/create/: main.go
backend-go/handlers/spreadsheets/get/: main.go
backend-go/handlers/spreadsheets/update_sheets/: main.go
backend-go/handlers/spreadsheets/update_title/: main.go
backend-rust/: Cargo.toml  deploy.ps1  go.mod  go.sum  main.go
backend-rust/cdk.out/: SpreadSheetRustStack.assets.json  SpreadSheetRustStack.template.json  manifest.json  tree.json
backend-rust/src/: config.rs
backend-rust/src/db/: mod.rs  redis.rs
backend/config/: config.go
backend/db/: dynamo.go  redis.go
backend/db/model/: Comment.go  Note.go  SpreadSheet.go  User.go
backend/handlers/auth/: login.go
backend/handlers/auth/authenticate/: main.go
backend/handlers/auth/callback/: main.go
backend/handlers/comment/create/: main.go
backend/handlers/comment/delete/: main.go
backend/handlers/comment/get/: main.go
backend/handlers/lambda/: main.go
backend/utils/: json.go
web/: .env  .env.development  .env.production  jest.config.ts  jest.setup.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
(+84 files in other folders)
