[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-dynamodb = "1.4.0"
lambda_http = "0.8.3"
lambda_runtime = "0.8.3"
momento = "0.32.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[bin]]
name = "spreadsheet_get"
path = "src/bin/functions/spreadsheets/get.rs"


